tests/baselines/reference/privateNamesAndStaticFields.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticFields.ts(4,5): error TS18019: 'static' modifier cannot be used with a private-named field
tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticFields.ts(11,5): error TS18019: 'static' modifier cannot be used with a private-named field


==== tests/cases/conformance/classes/members/privateNames/privateNamesAndStaticFields.ts (2 errors) ====
    // @target es6
    
    class A {
        static #foo: number;
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private-named field
        constructor () {
            A.#foo = 3;
        }
    }
    
    class B extends A {
        static #foo: string;
        ~~~~~~
!!! error TS18019: 'static' modifier cannot be used with a private-named field
        constructor () {
            super();
            B.#foo = "some string";
        }
    }
    